<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.github.ivbaranov.mli.MaterialLetterIcon
            android:id="@+id/letterPatient"
            android:layout_width="44dp"
            android:fontFamily="serif"
            android:layout_marginEnd="20dp"
            app:mli_shape_color="@color/light_blue"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullname"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:fontFamily="serif"
                android:text="@string/fullname"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diagnosis"
                android:text="@string/diagnosis"
                android:fontFamily="serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:text="@string/time"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/buttonEdit"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginEnd="20dp"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageView
            android:id="@+id/buttonDelete"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/rounded_corner_red"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>
